--- a/面试/算法/位运算/简单/二分查找-简单(1-20).md
+++ b/面试/算法/位运算/简单/二分查找-简单(1-20).md
@@ -8,7 +8,245 @@
 
 # 位运算-简单(1-20)
 
-## 1.[[268. 丢失的数字](https://leetcode-cn.com/problems/missing-number/)]
+## 1.[[136. 只出现一次的数字](https://leetcode-cn.com/problems/single-number/)]
+
+**描述**
+
+给定一个非空整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
+
+**说明：**
+
+你的算法应该具有线性时间复杂度。 你可以不使用额外空间来实现吗？
+
+**示例**
+
+**示例 1：**
+
+```
+输入: [2,2,1]
+输出: 1
+```
+
+**示例 2:**
+
+```
+输入: [4,1,2,1,2]
+输出: 4
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int singleNumber(int[] nums) {
+        int ans = 0;
+        for(int num : nums){
+            ans ^= num;
+        }
+        return ans;
+    }
+}
+```
+
+## 2.[[169. 多数元素](https://leetcode-cn.com/problems/majority-element/)]
+
+**描述**
+
+给定一个大小为 n 的数组，找到其中的多数元素。多数元素是指在数组中出现次数 大于 ⌊ n/2 ⌋ 的元素。
+
+你可以假设数组是非空的，并且给定的数组总是存在多数元素。
+
+**说明：**
+
+你的算法应该具有线性时间复杂度。 你可以不使用额外空间来实现吗？
+
+**示例**
+
+**示例 1：**
+
+```
+输入：[3,2,3]
+输出：3
+```
+
+**示例 2:**
+
+```
+输入：[2,2,1,1,1,2,2]
+输出：2
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int majorityElement(int[] nums) {
+        Arrays.sort(nums);
+        return nums[nums.length / 2];
+    }
+}
+```
+
+## 3.[[190. 颠倒二进制位](https://leetcode-cn.com/problems/reverse-bits/)]
+
+**描述**
+
+颠倒给定的 32 位无符号整数的二进制位。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: 00000010100101000001111010011100
+输出: 00111001011110000010100101000000
+解释: 输入的二进制串 00000010100101000001111010011100 表示无符号整数 43261596，
+     因此返回 964176192，其二进制表示形式为 00111001011110000010100101000000。
+```
+
+**示例 2:**
+
+```
+输入：11111111111111111111111111111101
+输出：10111111111111111111111111111111
+解释：输入的二进制串 11111111111111111111111111111101 表示无符号整数 4294967293，
+     因此返回 3221225471 其二进制表示形式为 10111111111111111111111111111111 。
+```
+
+**题解**
+
+**Java**
+
+```java
+public class Solution {
+    public int reverseBits(int n) {
+        int ans = 0;
+        for(int i=0; i<32; i++){
+            // 1 & n >> i 取出每一位数
+            // << (31 - i) 左移到对应的位置
+            ans += (1 & n >> i) << (31 - i);
+        }
+        return ans;
+    }
+}
+```
+
+## 4.[[191. 位1的个数](https://leetcode-cn.com/problems/number-of-1-bits/)]
+
+**描述**
+
+编写一个函数，输入是一个无符号整数（以二进制串的形式），返回其二进制表达式中数字位数为 '1' 的个数（也被称为[汉明重量](https://baike.baidu.com/item/汉明重量)）。
+
+**提示：**
+
+- 请注意，在某些语言（如 Java）中，没有无符号整数类型。在这种情况下，输入和输出都将被指定为有符号整数类型，并且不应影响您的实现，因为无论整数是有符号的还是无符号的，其内部的二进制表示形式都是相同的。
+- 在 Java 中，编译器使用二进制补码记法来表示有符号整数。因此，在上面的 示例 3 中，输入表示有符号整数 -3。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: 00000010100101000001111010011100
+输出: 00111001011110000010100101000000
+解释: 输入的二进制串 00000010100101000001111010011100 表示无符号整数 43261596，
+     因此返回 964176192，其二进制表示形式为 00111001011110000010100101000000。
+```
+
+**示例 2:**
+
+```
+输入：11111111111111111111111111111101
+输出：10111111111111111111111111111111
+解释：输入的二进制串 11111111111111111111111111111101 表示无符号整数 4294967293，
+     因此返回 3221225471 其二进制表示形式为 10111111111111111111111111111111 。
+```
+
+**题解**
+
+**Java**
+
+```java
+public class Solution {
+    // 取出每一位, 是否等于1
+    public int hammingWeight(int n) {
+        int count = 0;
+        for(int i=0; i < 32; i++){
+            if((n >> i & 1) == 1) count++;
+        }
+        return count;
+    }
+}
+
+public class Solution {
+    // 自身-1 做与运算
+    public int hammingWeight(int n) {
+        int count = 0;
+        while(n != 0){
+            count++;
+            n &= n - 1;
+        }
+        return count;
+    }
+}
+```
+
+## 5.[[231. 2的幂](https://leetcode-cn.com/problems/power-of-two/)]
+
+**描述**
+
+给定一个整数，编写一个函数来判断它是否是 2 的幂次方。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: 1
+输出: true
+解释: 20 = 1
+```
+
+**示例 2:**
+
+```
+输入: 16
+输出: true
+解释: 24 = 16
+```
+
+**示例 2:**
+
+```
+输入: 218
+输出: false
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 判断其2进制中1的数量, 只有一个1为2的幂次方
+    public boolean isPowerOfTwo(int n) {
+        if(n <= 0) return false;
+        int count = 0;
+        while(n != 0){
+            count++;
+            if(count > 1) return false;
+            n &= n - 1;
+        }
+        return true;
+    }
+}
+```
+
+## 6.[[268. 丢失的数字](https://leetcode-cn.com/problems/missing-number/)]
 
 **描述**
 
@@ -61,6 +299,523 @@ class Solution {
             missing ^= i ^ nums[i];
         }
         return missing;
+    }
+}
+```
+
+## 7.[[342. 4的幂](https://leetcode-cn.com/problems/power-of-four/)]
+
+**描述**
+
+给定一个整数，写一个函数来判断它是否是 4 的幂次方。如果是，返回 true ；否则，返回 false 。
+
+整数 n 是 4 的幂次方需满足：存在整数 x 使得 n == 4x
+
+**示例**
+
+**示例 1：**
+
+```
+输入：n = 16
+输出：true
+```
+
+**示例 2:**
+
+```
+输入：n = 5
+输出：false
+```
+
+**示例 3:**
+
+```
+输入：n = 1
+输出：true
+```
+
+**提示：**
+
+- `-231 <= n <= 231 - 1`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 1的数量大于1, 不是4的倍数, 1的位置是奇数, 不是4的倍数
+    public boolean isPowerOfFour(int n) {
+        if(n <= 0) return false;
+        int count = 0;
+        for(int i=0; i<32; i++){
+            if((1 & n >> i) == 1){
+                count++;
+                if((1 & i) == 1 || count > 1){
+                    return false;
+                }
+            } 
+        }
+        return true;
+    }
+}
+```
+
+## 8.[[371. 两整数之和](https://leetcode-cn.com/problems/sum-of-two-integers/)]
+
+**描述**
+
+**不使用**运算符 `+` 和 `-` ，计算两整数 `a` 、`b` 之和。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: a = 1, b = 2
+输出: 3
+```
+
+**示例 2:**
+
+```
+输入: a = -2, b = 3
+输出: 1
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int getSum(int a, int b) {
+        while(b != 0){
+            int t = a ^ b;
+            b = (a & b) << 1;
+            a = t;
+        }
+        return a;
+    }
+}
+```
+
+## 9.[[389. 找不同](https://leetcode-cn.com/problems/find-the-difference/)]
+
+**描述**
+
+给定两个字符串 ***s*** 和 ***t***，它们只包含小写字母。
+
+字符串 ***t\*** 由字符串 ***s\*** 随机重排，然后在随机位置添加一个字母。
+
+请找出在 ***t*** 中被添加的字母。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "abcd", t = "abcde"
+输出："e"
+解释：'e' 是那个被添加的字母。
+```
+
+**示例 2:**
+
+```
+输入：s = "", t = "y"
+输出："y"
+```
+
+**示例 3:**
+
+```
+输入：s = "a", t = "aa"
+输出："a"
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public char findTheDifference(String s, String t) {
+        int ans = 0;
+        for(char c : s.toCharArray()){
+            ans ^= c;
+        }
+        for(char c : t.toCharArray()){
+            ans ^= c;
+        }
+        return (char)ans;
+    }
+}
+```
+
+## 10.[[401. 二进制手表](https://leetcode-cn.com/problems/binary-watch/)]
+
+**描述**
+
+二进制手表顶部有 4 个 LED 代表 小时（0-11），底部的 6 个 LED 代表 分钟（0-59）。
+
+每个 LED 代表一个 0 或 1，最低位在右侧。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: n = 1
+返回: ["1:00", "2:00", "4:00", "8:00", "0:01", "0:02", "0:04", "0:08", "0:16", "0:32"]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<String> readBinaryWatch(int num) {
+        List<String> ans = new ArrayList();
+        for(int i=0; i<12; i++){
+            for(int j=0; j<60; j++){
+                if(oneCount(i) + oneCount(j) == num){
+                    ans.add(formatDate(i, j));
+                }
+            }
+        }
+        return ans;
+    }
+	// 计算2进制下1的数量
+    public int oneCount(int num){
+        int count = 0;
+        while(num != 0){
+            count++;
+            num &= num - 1; 
+        }
+        return count;
+    }
+	// 格式化日期
+    public String formatDate(int hours, int minutes){
+        StringBuilder sb = new StringBuilder();       
+        sb.append(hours).append(":");
+        if(minutes < 10){
+            sb.append(0);
+        }
+        sb.append(minutes);
+        return sb.toString();
+    }
+}
+```
+
+## 11.[[405. 数字转换为十六进制数](https://leetcode-cn.com/problems/convert-a-number-to-hexadecimal/)]
+
+**描述**
+
+给定一个整数，编写一个算法将这个数转换为十六进制数。对于负整数，我们通常使用 补码运算 方法。
+
+**注意:**
+
+- 十六进制中所有字母(a-f)都必须是小写。
+- 十六进制字符串中不能包含多余的前导零。如果要转化的数为0，那么以单个字符'0'来表示；对于其他情况，十六进制字符串中的第一个字符将不会是0字符。 
+- 给定的数确保在32位有符号整数范围内。
+- 不能使用任何由库提供的将数字直接转换或格式化为十六进制的方法。
+
+**示例**
+
+**示例 1：**
+
+```
+输入:
+26
+
+输出:
+"1a"
+```
+
+**示例 2：**
+
+```
+输入:
+-1
+
+输出:
+"ffffffff"
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String toHex(int num) {
+        if(num == 0) return "0";
+        StringBuilder sb = new StringBuilder();
+        // 转换成2进制
+        int[] num_2 = new int[32];
+        for(int i=0; i<32; i++){
+            num_2[31 - i] = (num >> i) & 1;
+        }
+
+        boolean flag = false;
+        // 每四位为一组, 累加
+        for(int i=0; i<32; i+=4){
+            int tmp = 0;
+            if(num_2[i] == 1) tmp += 8;
+            if(num_2[i+1] == 1) tmp += 4;
+            if(num_2[i+2] == 1) tmp += 2;
+            if(num_2[i+3] == 1) tmp += 1;
+            if(flag || tmp != 0){
+                flag = true;
+                sb.append(tmp >= 10 ? get16num(tmp) : tmp);
+            }
+        }
+        return sb.toString();
+    }
+
+    public String get16num(int num){
+        if(num == 10){
+            return "a";
+        }else if(num == 11){
+            return "b";
+        }else if(num == 12){
+            return "c";
+        }else if(num == 13){
+            return "d";
+        }else if(num == 14){
+            return "e";
+        }else{
+            return "f";
+        }
+    }
+}
+```
+
+## 12.[[461. 汉明距离](https://leetcode-cn.com/problems/hamming-distance/)]
+
+**描述**
+
+两个整数之间的汉明距离指的是这两个数字对应二进制位不同的位置的数目。
+
+给出两个整数 x 和 y，计算它们之间的汉明距离。
+
+**注意：**
+0 ≤ x, y < 231.
+
+**示例**
+
+**示例 1：**
+
+```
+输入: x = 1, y = 4
+
+输出: 2
+
+解释:
+1   (0 0 0 1)
+4   (0 1 0 0)
+       ↑   ↑
+
+上面的箭头指出了对应二进制位不同的位置。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int hammingDistance(int x, int y) {
+        int count = 0;
+        // 比较2进制下每一位
+        for(int i=0; i<32; i++){
+            if((1 & (x >> i)) != (1 & (y >> i))){
+                count++;
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 13.[[476. 数字的补数](https://leetcode-cn.com/problems/number-complement/)]
+
+**描述**
+
+给定一个正整数，输出它的补数。补数是对该数的二进制表示取反。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: 5
+输出: 2
+解释: 5 的二进制表示为 101（没有前导零位），其补数为 010。所以你需要输出 2 。
+```
+
+**示例 2：**
+
+```
+输入: 1
+输出: 0
+解释: 1 的二进制表示为 1（没有前导零位），其补数为 0。所以你需要输出 0 。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int findComplement(int num) {
+        int ans = 0;
+        // 标志位, 为true说说明, 从左到右遍历遇到了1, 可以开始取反
+        boolean flag = false;
+        for(int i=0; i<32; i++){
+            // 从左到右, 遍历2进制的每一位
+            int t = 1 & (num >> 31 - i);
+            // 当当前位是0, 取反为1, 可以进行计算
+            if(flag && t == 0){
+                ans += Math.pow(2, 31 - i);
+            }else if(!flag && t == 1){
+                flag = true;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 14.[[693. 交替位二进制数](https://leetcode-cn.com/problems/binary-number-with-alternating-bits/)]
+
+**描述**
+
+给定一个正整数，检查它的二进制表示是否总是 0、1 交替出现：换句话说，就是二进制表示中相邻两位的数字永不相同。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：n = 5
+输出：true
+解释：5 的二进制表示是：101
+```
+
+**示例 2：**
+
+```
+输入：n = 7
+输出：false
+解释：7 的二进制表示是：111.
+```
+
+**示例 3：**
+
+```
+输入：n = 11
+输出：false
+解释：11 的二进制表示是：1011.
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean hasAlternatingBits(int n) {
+        // 算出第一位是1或0
+        int flag = 1 & n;
+        // n / 2减少一边循环
+        int t = n / 2;
+        int start = 1;
+        while(t != 0){
+            t /= 2;
+            // flag 与下一位比较, 是否相同, 相同返回false
+            if(flag == (1 & (n >> start++))){
+                return false;
+            }
+            // flag 变为不同的值
+            flag = 1 - flag;
+        }
+        return true;
+    }
+}
+```
+
+## 15.[[751. IP 到 CIDR](https://leetcode-cn.com/problems/ip-to-cidr) ]
+
+## 16.[[762. 二进制表示中质数个计算置位](https://leetcode-cn.com/problems/prime-number-of-set-bits-in-binary-representation/)]
+
+**描述**
+
+给定两个整数 L 和 R ，找到闭区间 [L, R] 范围内，计算置位位数为质数的整数个数。
+
+（注意，计算置位代表二进制表示中1的个数。例如 21 的二进制表示 10101 有 3 个计算置位。还有，1 不是质数。）
+
+**示例**
+
+**示例 1：**
+
+```
+输入: L = 6, R = 10
+输出: 4
+解释:
+6 -> 110 (2 个计算置位，2 是质数)
+7 -> 111 (3 个计算置位，3 是质数)
+9 -> 1001 (2 个计算置位，2 是质数)
+10-> 1010 (2 个计算置位，2 是质数)
+```
+
+**示例 2：**
+
+```
+输入: L = 10, R = 15
+输出: 5
+解释:
+10 -> 1010 (2 个计算置位, 2 是质数)
+11 -> 1011 (3 个计算置位, 3 是质数)
+12 -> 1100 (2 个计算置位, 2 是质数)
+13 -> 1101 (3 个计算置位, 3 是质数)
+14 -> 1110 (3 个计算置位, 3 是质数)
+15 -> 1111 (4 个计算置位, 4 不是质数)
+```
+
+**注意:**
+
+1. `L, R` 是 `L <= R` 且在 `[1, 10^6]` 中的整数。
+2. `R - L` 的最大值为 10000。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int countPrimeSetBits(int L, int R) {
+        int count = 0;
+        while(L <= R){
+            int count1 = get1Count(L);
+            if(count1 == 2 || count1 == 3 || count1 == 5 || count1 == 7 || count1 == 11 || count1 == 13 
+                || count1 == 17 || count1 == 19 || count1 == 23 || count1 == 31){
+                count++;
+            }
+            L++;
+        }
+        return count;
+    }
+	// 计算1的数量
+    public int get1Count(int num){
+        int count = 0;
+        while(num != 0){
+            count++;
+            num &= num-1;
+        }
+        return count;
     }
 }
 ```
