--- a/面试/算法/位运算/简单/二分查找-简单(1-20).md
+++ b/面试/算法/位运算/简单/二分查找-简单(1-20).md
@@ -820,4 +820,267 @@ class Solution {
 }
 ```
 
-## 
+## 17.[[1290. 二进制链表转整数](https://leetcode-cn.com/problems/convert-binary-number-in-a-linked-list-to-integer/)]
+
+**描述**
+
+给你一个单链表的引用结点 head。链表中每个结点的值不是 0 就是 1。已知此链表是一个整数数字的二进制表示形式。
+
+请你返回该链表所表示数字的 十进制值 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：head = [1,0,1]
+输出：5
+解释：二进制数 (101) 转化为十进制数 (5)
+```
+
+**示例 2：**
+
+```
+输入：head = [0]
+输出：0
+```
+
+**示例 3：**
+
+```
+输入：head = [1,0,0,1,0,0,1,1,1,0,0,0,0,0,0]
+输出：18880
+```
+
+**注意:**
+
+1. 链表不为空。
+2. 链表的结点总数不超过 `30`。
+3. 每个结点的值不是 `0` 就是 `1`。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int getDecimalValue(ListNode head) {
+        List<Integer> num_2 = new ArrayList();
+        while(head != null){
+            num_2.add(head.val);
+            head = head.next;
+        }
+        int ans = 0;
+        int start = 1;
+        for(int i=num_2.size()-1; i>=0; i--){
+            if(num_2.get(i) == 1){
+                ans += start;
+            }
+            start *= 2;
+        }
+        return ans;
+    }
+
+}
+```
+
+## 18.[[1342. 将数字变成 0 的操作次数](https://leetcode-cn.com/problems/number-of-steps-to-reduce-a-number-to-zero/)]
+
+**描述**
+
+给你一个非负整数 `num` ，请你返回将它变成 0 所需要的步数。 如果当前数字是偶数，你需要把它除以 2 ；否则，减去 1 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：num = 14
+输出：6
+解释：
+步骤 1) 14 是偶数，除以 2 得到 7 。
+步骤 2） 7 是奇数，减 1 得到 6 。
+步骤 3） 6 是偶数，除以 2 得到 3 。
+步骤 4） 3 是奇数，减 1 得到 2 。
+步骤 5） 2 是偶数，除以 2 得到 1 。
+步骤 6） 1 是奇数，减 1 得到 0 。
+```
+
+**示例 2：**
+
+```
+输入：num = 8
+输出：4
+解释：
+步骤 1） 8 是偶数，除以 2 得到 4 。
+步骤 2） 4 是偶数，除以 2 得到 2 。
+步骤 3） 2 是偶数，除以 2 得到 1 。
+步骤 4） 1 是奇数，减 1 得到 0 。
+```
+
+**示例 3：**
+
+```
+输入：num = 123
+输出：12
+```
+
+**注意:**
+
+1. `0 <= num <= 10^6`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int numberOfSteps (int num) {
+        int count = 0;
+        while(num != 0){
+            if((1 & num) == 0){
+                num /= 2;
+            }else{
+                num -= 1;
+            }
+            count++;
+        }
+        return count;
+    }
+}
+```
+
+## 19.[[1356. 根据数字二进制下 1 的数目排序](https://leetcode-cn.com/problems/sort-integers-by-the-number-of-1-bits/)]
+
+**描述**
+
+给你一个整数数组 arr 。请你将数组中的元素按照其二进制表示中数字 1 的数目升序排序。
+
+如果存在多个数字二进制中 1 的数目相同，则必须将它们按照数值大小升序排列。
+
+请你返回排序后的数组。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [0,1,2,3,4,5,6,7,8]
+输出：[0,1,2,4,8,3,5,6,7]
+解释：[0] 是唯一一个有 0 个 1 的数。
+[1,2,4,8] 都有 1 个 1 。
+[3,5,6] 有 2 个 1 。
+[7] 有 3 个 1 。
+按照 1 的个数排序得到的结果数组为 [0,1,2,4,8,3,5,6,7]
+```
+
+**示例 2：**
+
+```
+输入：arr = [1024,512,256,128,64,32,16,8,4,2,1]
+输出：[1,2,4,8,16,32,64,128,256,512,1024]
+解释：数组中所有整数二进制下都只有 1 个 1 ，所以你需要按照数值大小将它们排序。
+```
+
+**示例 3：**
+
+```
+输入：arr = [10000,10000]
+输出：[10000,10000]
+```
+
+**注意:**
+
+1. `1 <= arr.length <= 500`
+2. `0 <= arr[i] <= 10^4`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] sortByBits(int[] arr) {
+        for(int i=0; i<arr.length; i++){
+            // 计算出1的个数 * 10001 加上原数, 得到的新数, 1的数量越多越大, 1的数量相同时, 原数越大则新数越大
+            // * 10001, 用例数字大小的范围是0-10000, 最大值是10000, *的数比10000大即可
+            arr[i] += getOneCount(arr[i]) * 10001;
+        }
+        Arrays.sort(arr);
+        for(int i=0; i<arr.length; i++){
+            arr[i] %= 10001;
+        }
+        return arr;
+    }
+
+    public int getOneCount(int num){
+        int count = 0;
+        while(num != 0){
+            count++;
+            num &= num - 1;
+        }
+        return count;
+    }
+}
+```
+
+## 20.[[1486. 数组异或操作](https://leetcode-cn.com/problems/xor-operation-in-an-array/)]
+
+**描述**
+
+给你两个整数，n 和 start 。
+
+数组 nums 定义为：nums[i] = start + 2*i（下标从 0 开始）且 n == nums.length 。
+
+请返回 nums 中所有元素按位异或（XOR）后得到的结果。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：n = 5, start = 0
+输出：8
+解释：数组 nums 为 [0, 2, 4, 6, 8]，其中 (0 ^ 2 ^ 4 ^ 6 ^ 8) = 8 。
+     "^" 为按位异或 XOR 运算符。
+```
+
+**示例 2：**
+
+```
+输入：n = 4, start = 3
+输出：8
+解释：数组 nums 为 [3, 5, 7, 9]，其中 (3 ^ 5 ^ 7 ^ 9) = 8.
+```
+
+**示例 3：**
+
+```
+输入：n = 1, start = 7
+输出：7
+```
+
+**注意:**
+
+1. `1 <= n <= 1000`
+2. `0 <= start <= 1000`
+3. `n == nums.length`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int xorOperation(int n, int start) {
+        int ans = 0;
+        while(n != 0){
+            n--;
+            ans ^= start;
+            start += 2;
+        }
+        return ans;
+    }   
+}
+```
+
