--- a/面试/算法/贪心算法/简单/贪心算法-简单(1-20).md
+++ b/面试/算法/贪心算法/简单/贪心算法-简单(1-20).md
@@ -6,7 +6,7 @@
 
 
 
-# 栈-简单(1-20)
+# 贪心算法-简单(1-20)
 
 ## 1.[[122. 买卖股票的最佳时机 II](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/)]
 
