--- a/面试/算法/树/简单/树-简单(1-20).md
+++ b/面试/算法/树/简单/树-简单(1-20).md
@@ -421,3 +421,433 @@ class Solution {
 }
 ```
 
+## 8.[[112. 路径总和](https://leetcode-cn.com/problems/path-sum/)]
+
+**描述**
+
+给定一个二叉树和一个目标和，判断该树中是否存在根节点到叶子节点的路径，这条路径上所有节点值相加等于目标和。
+
+**说明:** 叶子节点是指没有子节点的节点。
+
+**示例**
+
+**示例 1：**
+
+```
+给定如下二叉树，以及目标和 sum = 22，
+              5
+             / \
+            4   8
+           /   / \
+          11  13  4
+         /  \      \
+        7    2      1
+返回 true, 因为存在目标和为 22 的根节点到叶子节点的路径 5->4->11->2。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean hasPathSum(TreeNode root, int sum) {
+        if(root == null) return false;
+        sum -= root.val;
+        // 如果是叶子节点, 判断是否等于0
+        if(root.left == null && root.right == null){
+            return sum == 0;
+        }
+        // 只要判断有一条即可, 所以用||
+        return hasPathSum(root.left, sum) || hasPathSum(root.right, sum);
+    }
+}
+```
+
+## 9.[[226. 翻转二叉树](https://leetcode-cn.com/problems/invert-binary-tree/)]
+
+**描述**
+
+翻转一棵二叉树。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：
+     4
+   /   \
+  2     7
+ / \   / \
+1   3 6   9
+输出:
+     4
+   /   \
+  7     2
+ / \   / \
+9   6 3   1
+```
+
+**题解**
+
+**Java**
+
+```java
+// 先从根节点翻转 一直到叶子节点
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        if(root == null) return root;
+        loopTree(root);
+        return root;
+    }
+
+    public void loopTree(TreeNode root){
+        if(root.left == null && root.right == null){
+            return;
+        }
+        // 交换左右节点
+        TreeNode left = root.left;
+        root.left = root.right;
+        root.right = left;
+        // 再交换左右节点的子节点
+        if(root.left != null){
+            loopTree(root.left);
+        }
+        if(root.right != null){
+            loopTree(root.right);
+        }
+    }
+}
+// 先从叶子节点翻转, 一直到根节点
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        if(root == null) return null;
+        TreeNode left = invertTree(root.left);
+        TreeNode right = invertTree(right.right);
+        root.right = left;
+        root.left = right;
+        return root;
+    }
+}
+```
+
+## 10.[[235. 二叉搜索树的最近公共祖先](https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-search-tree/)]
+
+**描述**
+
+给定一个二叉搜索树, 找到该树中两个指定节点的最近公共祖先。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: root = [6,2,8,0,4,7,9,null,null,3,5], p = 2, q = 8
+输出: 6 
+解释: 节点 2 和节点 8 的最近公共祖先是 6。
+```
+
+**示例 2:**
+
+```
+输入: root = [6,2,8,0,4,7,9,null,null,3,5], p = 2, q = 4
+输出: 2
+解释: 节点 2 和节点 4 的最近公共祖先是 2, 因为根据定义最近公共祖先节点可以为节点本身。
+```
+
+**说明:**
+
+- 所有节点的值都是唯一的。
+- p、q 为不同节点且均存在于给定的二叉搜索树中。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        int pVal = p.val;
+        int qVal = q.val;
+        // 二叉搜索树, 左边小右边大
+        while(root != null){
+            int val = root.val;
+            // 如果p,q的值, 都大于根节点的值, 去右子节点接着查
+            if(pVal > val && qVal > val){
+                root = root.right;
+            // 如果p,q的值, 都小于根节点的值, 去左子节点接着查
+            }else if(pVal < val && qVal < val){
+                root = root.left;
+            // 如果一左一右, 返回当前跟节点
+            }else{
+                return root;
+            }
+        }
+        return root;
+    }
+}
+```
+
+## 11.[[257. 二叉树的所有路径](https://leetcode-cn.com/problems/binary-tree-paths/)]
+
+**描述**
+
+给定一个二叉树，返回所有从根节点到叶子节点的路径。
+
+**说明:** 叶子节点是指没有子节点的节点。
+
+**示例**
+
+**示例 1：**
+
+```
+输入:
+
+   1
+ /   \
+2     3
+ \
+  5
+
+输出: ["1->2->5", "1->3"]
+
+解释: 所有根节点到叶子节点的路径为: 1->2->5, 1->3
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<String> binaryTreePaths(TreeNode root) {
+        List<String> ans = new ArrayList();
+        loopTree(root, ans, new StringBuilder());
+        return ans;
+    }
+
+    public void loopTree(TreeNode root, List<String> ans, StringBuilder sb){
+        if(root != null){
+            sb.append(root.val);
+            if(root.left == null && root.right == null){
+                ans.add(sb.toString());
+            }else{
+                sb.append("->");
+                loopTree(root.left, ans, new StringBuilder(sb));
+                loopTree(root.right, ans, new StringBuilder(sb));
+            }
+        }
+    }
+}
+```
+
+## 12.[[270. 最接近的二叉搜索树值](https://leetcode-cn.com/problems/closest-binary-search-tree-value)]
+
+## 13.[[404. 左叶子之和](https://leetcode-cn.com/problems/sum-of-left-leaves/)]
+
+**描述**
+
+计算给定二叉树的所有左叶子之和。
+
+**示例**
+
+**示例 1：**
+
+```
+    3
+   / \
+  9  20
+    /  \
+   15   7
+
+在这个二叉树中，有两个左叶子，分别是 9 和 15，所以返回 24
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int sumOfLeftLeaves(TreeNode root) {
+        return loopTree(root, false);
+    }
+
+    public int loopTree(TreeNode root, boolean isLeft){
+        if(root == null){
+            return 0;
+        }
+        if(isLeft && root.left == null && root.right == null){
+            return root.val + loopTree(root.left, true) + loopTree(root.right, false);
+        }
+        return loopTree(root.left, true) + loopTree(root.right, false);
+    }
+}
+```
+
+## 14.[[501. 二叉搜索树中的众数](https://leetcode-cn.com/problems/find-mode-in-binary-search-tree/)]
+
+**描述**
+
+给定一个有相同值的二叉搜索树（BST），找出 BST 中的所有众数（出现频率最高的元素）。
+
+假定 BST 有如下定义：
+
+- 结点左子树中所含结点的值小于等于当前结点的值
+- 结点右子树中所含结点的值大于等于当前结点的值
+- 左子树和右子树都是二叉搜索树
+
+**示例**
+
+**示例 1：**
+
+```
+   1
+    \
+     2
+    /
+   2
+ 返回[2].
+```
+
+**提示**：如果众数超过1个，不需考虑输出顺序
+
+**进阶：**你可以不使用额外的空间吗？（假设由递归产生的隐式调用栈的开销不被计算在内）
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 当前数字
+    private int num;
+    // 当前数字数量
+    private int count;
+    // 存储众数
+    private List<Integer> list;
+    // 每一个众数的数量
+    private int maxCount;
+
+    public int[] findMode(TreeNode root) {
+        if(root == null) return new int[0];
+        list = new ArrayList();
+        loopTree(root);
+        // 中序遍历后, 还需要最后一次判断
+        if(count > maxCount){
+            list.clear();
+            list.add(num);
+        }else if(count == maxCount){
+            list.add(num);
+        }
+        // 将list转换为数组
+        int[] ans = new int[list.size()];
+        for(int i=0; i<ans.length; i++){
+            ans[i] = list.get(i);
+        }
+        return ans;
+    }
+	// 中序遍历二叉搜索树
+    public void loopTree(TreeNode root){
+        if(root == null) return;
+        loopTree(root.left);
+        // 如果当前数字的数量是0
+        if(count == 0){
+            // 保存当前数字
+            num = root.val;
+            // 当前数字数量记为1
+            count = 1;
+        // 如果数字相同, 数量+1
+        }else if(num == root.val){
+            count++;
+        // 如果数字不同
+        }else{
+            // 查看list是否为空, 为空直接将当前数字添加进去, 并且将maxCount置为当前数字的数量 
+            if(list.size() == 0){
+                list.add(num);
+                maxCount = count;
+            // 如果不为空
+            }else{
+                // 比较当前数字的数量和maxCount进行比较
+                // 如果大于, 说明list中存储的不是众数, 把list清空, 将当前数字填充进去
+                if(count > maxCount){
+                    list.clear();
+                    list.add(num);
+                    maxCount = count;
+                // 如果等于, 说明当前数字也是众数, 将当前数字填充进去
+                }else if(count == maxCount){
+                    list.add(num);
+                }
+                // 如果小与, 说明当前数字不是众数, 不做任何操作
+            }
+            // 将当前数字, 替换成正在遍历的数字
+            num = root.val;
+            count = 1;
+        }
+        loopTree(root.right);
+    } 
+}
+```
+
+## 15.[[530. 二叉搜索树的最小绝对差](https://leetcode-cn.com/problems/minimum-absolute-difference-in-bst/)]
+
+**描述**
+
+给你一棵所有节点为非负值的二叉搜索树，请你计算树中任意两节点的差的绝对值的最小值。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：
+
+   1
+    \
+     3
+    /
+   2
+
+输出：
+1
+
+解释：
+最小绝对差为 1，其中 2 和 1 的差的绝对值为 1（或者 2 和 3）。
+```
+
+**提示：**
+
+- 树中至少有 2 个节点。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 最小值
+    private int min;
+    // 遍历的上一个值
+    private int pre;
+    public int getMinimumDifference(TreeNode root) {
+        min = Integer.MAX_VALUE;
+        pre = -1;
+        loopTree(root);
+        return min;
+    }
+
+    // 中序遍历
+    public void loopTree(TreeNode root){
+        if(root == null) return;
+        loopTree(root.left);
+        if(pre != -1){
+            min = Math.min(min, root.val - pre);
+        }
+        pre = root.val;
+        loopTree(root.right);
+    }
+}
+```
+
+## 
