--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -1,6 +1,14 @@
-# 创建型模式
+# 设计原则
 
-## 工厂模式
+## 单一职责原则
+
+英文名称是, **Single Responsibility Principle**, 简称**SRP**
+
+# 设计模式
+
+## 创建型模式
+
+### 工厂模式
 
 **接口**
 
@@ -56,7 +64,7 @@ public class Main {
 }
 ```
 
-## 抽象工厂模式
+### 抽象工厂模式
 
 **接口**
 
@@ -169,9 +177,9 @@ public class Main {
 }
 ```
 
-## 单例模式
+### 单例模式
 
-### 懒汉式(不推荐)
+#### 懒汉式(不推荐)
 
 懒汉式的意思是, 懒表示懒加载, 是指在使用的时候才开始实例化
 
@@ -189,7 +197,7 @@ public class LazySingleton {
 }
 ```
 
-### 饿汉式(不推荐)
+#### 饿汉式(不推荐)
 
 饿汉式的意思是, 表示不等待系统去调用, 在class被加载时就实例化对象, 占用较多空间
 
@@ -204,7 +212,7 @@ public class HungrySingleton {
 }
 ```
 
-### 静态内部类(推荐)
+#### 静态内部类(推荐)
 
 外部类被加载时, 内部类不会被加载, 所以要比饿汉式节省空间
 
@@ -221,7 +229,7 @@ public class Singleton{
 }
 ```
 
-### 双重校验锁(不推荐)
+#### 双重校验锁(不推荐)
 
 是对懒汉模式的优化, 第一次判断 INSTANCE == null为了避免非必要加锁，当第一次加载时才对实例进行加锁再实例化。
 这样既可以节约内存空间，又可以保证线程安全。
@@ -255,7 +263,7 @@ public class Lock2Singleton {
 }
 ```
 
-## 建造者模式
+### 建造者模式
 
 **实体类**
 
@@ -377,9 +385,9 @@ public class Main {
 }
 ```
 
-## 原型模式
+### 原型模式
 
-### 浅拷贝
+#### 浅拷贝
 
 不拷贝引用类型
 
@@ -409,7 +417,7 @@ public class Computer implements Cloneable {
 }
 ```
 
-### 深拷贝
+#### 深拷贝
 
 拷贝引用类型
 
@@ -481,15 +489,15 @@ class Disk implements Cloneable {
 }
 ```
 
-# 结构型模式
+## 结构型模式
 
-## 适配器模式
+### 适配器模式
 
-### 类适配器模式(不推荐)
+#### 类适配器模式(不推荐)
 
 在需要不改变（或者由于项目原因无法改变）原有接口或类结构的情况下扩展类的功能以适配不同的接口时，可以使用类的适配器模式。适配器模式通过创建一个继承原有类（需要扩展的类）并实现新接口的适配器类来实现
 
-#### 原有类
+##### 原有类
 
 ```java
 public class Source {
@@ -499,7 +507,7 @@ public class Source {
 }
 ```
 
-#### 扩展接口
+##### 扩展接口
 
 ```java
 public interface Targetable {
@@ -510,7 +518,7 @@ public interface Targetable {
 }
 ```
 
-#### 适配器
+##### 适配器
 
 ```java
 public class Adapter extends Source implements Targetable {
@@ -525,7 +533,7 @@ public class Adapter extends Source implements Targetable {
 }
 ```
 
-#### 主类
+##### 主类
 
 ```java
 public class Main {
@@ -537,11 +545,11 @@ public class Main {
 }
 ```
 
-### 对象适配器模式
+#### 对象适配器模式
 
 对象适配器模式的思路和类适配器模式基本相同，只是修改了Adapter类。Adapter不再继承Source类，而是持有Source类的实例，以解决兼容性问题。
 
-#### 适配器
+##### 适配器
 
 ```java
 public class ObjectAdapter implements Targetable {
@@ -565,7 +573,7 @@ public class ObjectAdapter implements Targetable {
 }
 ```
 
-#### 主类
+##### 主类
 
 ```java
 public class Main {
@@ -578,7 +586,7 @@ public class Main {
 }
 ```
 
-### 接口适配器模式
+##### 接口适配器模式
 
 在不希望实现一个接口中所有的方法时，可以创建一个抽象类AbstractAdapter实现所有方法，在使用时继承该抽象类按需实现方法即可
 
@@ -618,7 +626,7 @@ public class SourceSub2 extends AbstaractAdapter {
 }
 ```
 
-#### 主类
+##### 主类
 
 ```java
 public class Main {
@@ -631,7 +639,7 @@ public class Main {
 }
 ```
 
-## 装饰者模式
+### 装饰者模式
 
 装饰者模式（Decorator Pattern）指在无须改变原有类及类的继承关系的情况下，动态扩展一个类的功能。它通过装饰者来包裹真实的对象，并动态地向对象添加或者撤销功能。
 
@@ -690,7 +698,7 @@ public class Main {
 }
 ```
 
-## 代理模式
+### 代理模式
 
 代理类和被代理类实现相同的接口,  创建代理对象时, 在代理类的构造方法中, 创建被代理类的对象, 在代理方法中, 使用被代理的对象调用原方法
 
@@ -758,7 +766,7 @@ public class Main {
 }
 ```
 
-## 外观模式
+### 外观模式
 
 外观模式（Facade Pattern）也叫作门面模式，通过一个门面（Facade）向客户端提供一个访问系统的统一接口，客户端无须关心和知晓系统内部各子模块（系统）之间的复杂关系，其主要目的是降低访问拥有多个子系统的复杂系统的难度，简化客户端与其之间的接口。外观模式将子系统中的功能抽象成一个统一的接口，客户端通过这个接口访问系统，使得系统使用起来更加容易.
 
@@ -846,7 +854,7 @@ public class Main {
 }
 ```
 
-## 桥接模式
+### 桥接模式
 
 通过定义公共接口, 实现传入不同的实现类对象, 不改变代码逻辑的情况下完成不同的功能.
 
@@ -925,7 +933,7 @@ public class Main {
 }
 ```
 
-## 组合模式
+### 组合模式
 
 组合模式（Composite Pattern）又叫作部分整体模式，主要用于实现部分和整体操作的一致性。组合模式常根据树形结构来表示部分及整体之间的关系，使得用户对单个对象和组合对象的操作具有一致性。组合模式通过特定的数据结构简化了部分和整体之间的关系，使得客户端可以像处理单个元素一样来处理整体的数据集，而无须关心单个元素和整体数据集之间的内部复杂结构。组合模式以类似树形结构的方式实现整体和部分之间关系的组合。
 
@@ -996,4 +1004,4 @@ public class Main {
 
 
 
-# 行为型模式
+## 行为型模式
