--- a/后端/项目管理工具.md
+++ b/后端/项目管理工具.md
@@ -1,12 +1,26 @@
 # Maven
 
+## 安装
+
+可使用idea自带的maven
+
+### 配置环境变量
+
+#### idea自带的版本
+
+- 新建变量 MAVEN_HOME   值为 idea安装目录\plugins\maven\lib\maven3
+- 编辑Path变量   添加  %MAVEN_HOME%\bin
+
+#### 自己安装版本
+
+- 新建变量 MAVEN_HOME   值为maven安装目录
+- 编辑Path变量   添加  %MAVEN_HOME%\bin
+
 ## 仓库官网
 
 ```
 https://mvnrepository.com/
 ```
-
-
 
 ## 配置
 
