--- a/面试/算法/树/简单/树-简单(1-20).md
+++ b/面试/算法/树/简单/树-简单(1-20).md
@@ -850,4 +850,196 @@ class Solution {
 }
 ```
 
+## 16.[[543. 二叉树的直径](https://leetcode-cn.com/problems/diameter-of-binary-tree/)]
+
+**描述**
+
+给定一棵二叉树，你需要计算它的直径长度。一棵二叉树的直径长度是任意两个结点路径长度中的最大值。这条路径可能穿过也可能不穿过根结点。
+
+**示例**
+
+**示例 1：**
+
+```
+          1
+         / \
+        2   3
+       / \     
+      4   5   
+```
+
+返回 **3**, 它的长度是路径 [4,2,1,3] 或者 [5,2,1,3]。
+
+**注意：**两结点之间的路径长度是以它们之间边的数目表示。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    private int max = 0;
+    public int diameterOfBinaryTree(TreeNode root) {
+        maxDepth(root);
+        return max;
+    }
+	// 求二叉树最大深度
+    public int maxDepth(TreeNode root){
+        if(root == null) return 0;
+        // 左子树最大深度
+        int leftMaxDepth = maxDepth(root.left);
+        // 右子树最大深度
+        int rightMaxDepth = maxDepth(root.right);
+        // 左右子树最大深度相加是否是最大
+        if(max < leftMaxDepth + rightMaxDepth){
+            max = leftMaxDepth + rightMaxDepth;
+        }
+        return Math.max(leftMaxDepth+1, rightMaxDepth+1);
+    }
+}
+```
+
+## 17.[[559. N 叉树的最大深度](https://leetcode-cn.com/problems/maximum-depth-of-n-ary-tree/)]
+
+**描述**
+
+给定一个 N 叉树，找到其最大深度。
+
+最大深度是指从根节点到最远叶子节点的最长路径上的节点总数。
+
+N 叉树输入按层序遍历序列化表示，每组子节点由空值分隔（请参见示例）。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：root = [1,null,3,2,4,null,5,6]
+输出：3 
+```
+
+**示例 2：**
+
+```
+输入：root = [1,null,2,3,4,5,null,null,6,7,null,8,null,9,10,null,null,11,null,12,null,13,null,null,14]
+输出：5
+```
+
+**提示:**
+
+- 树的深度不会超过 `1000` 。
+- 树的节点数目位于 `[0, 104]` 之间。
+
+**题解**
+
+**Java**
+
+```java
+/*
+// Definition for a Node.
+class Node {
+    public int val;
+    public List<Node> children;
+
+    public Node() {}
+
+    public Node(int _val) {
+        val = _val;
+    }
+
+    public Node(int _val, List<Node> _children) {
+        val = _val;
+        children = _children;
+    }
+};
+*/
+
+class Solution {
+    public int maxDepth(Node root) {
+        if(root == null) return 0;
+        int max = 0;
+        // 遍历求每个子节点的最大深度
+        for(Node node : root.children){
+            max = Math.max(maxDepth(node),max);
+        }
+        return max + 1;
+    }
+}
+```
+
+## 16.[[606. 根据二叉树创建字符串](https://leetcode-cn.com/problems/construct-string-from-binary-tree/)]
+
+**描述**
+
+你需要采用前序遍历的方式，将一个二叉树转换成一个由括号和整数组成的字符串。
+
+空节点则用一对空括号 "()" 表示。而且你需要省略所有不影响字符串与原始二叉树之间的一对一映射关系的空括号对。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: 二叉树: [1,2,3,4]
+       1
+     /   \
+    2     3
+   /    
+  4     
+
+输出: "1(2(4))(3)"
+
+解释: 原本将是“1(2(4)())(3())”，
+在你省略所有不必要的空括号对之后，
+它将是“1(2(4))(3)”。
+```
+
+**示例 2：**
+
+```
+输入: 二叉树: [1,2,3,null,4]
+       1
+     /   \
+    2     3
+     \  
+      4 
+
+输出: "1(2()(4))(3)"
+
+解释: 和第一个示例相似，
+除了我们不能省略第一个对括号来中断输入和输出之间的一对一映射关系。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    private StringBuilder sb;
+    public String tree2str(TreeNode t) {
+        sb = new StringBuilder();
+        loopTree(t);
+        return sb.toString();
+    }
+
+    // 前序遍历
+    public void loopTree(TreeNode root){
+        if(root == null) return;
+        sb.append(root.val);
+        if(root.right != null || root.left != null){
+            sb.append("(");
+            loopTree(root.left);
+            sb.append(")");
+        }
+        if(root.right != null){
+            sb.append("(");
+            loopTree(root.right);
+            sb.append(")");
+        }
+        
+    }
+}
+```
+
 ## 
