--- a/前端/样例.md
+++ b/前端/样例.md
@@ -91,3 +91,33 @@ new date().format("yyyy-MM-dd");
 </script>
 ```
 
+# 防抖动函数
+
+防止相同作用的函数在短时间内大量执行, 导致性能浪费
+
+```js
+function debounce(func, delay){
+    let timer = null
+    // ...args可以传递多个参数, 使用闭包返回函数
+    return function (...args){
+        if (timer) clearTimeout(timer)
+        timer = setTimeout(() => {
+            func.apply(this, args)
+        }, delay)
+    }
+}
+```
+
+使用
+
+```js
+function sendMsg(msg){
+    $.ajax()
+}
+const send = debounce(sendMsg, 500)
+// 多次调用send, 如果在500毫秒内, 多次调用, 会不停的刷新500毫秒 
+send(msg)
+```
+
+
+
