--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -4,6 +4,20 @@
 
 英文名称是, **Single Responsibility Principle**, 简称**SRP**
 
+## 接口隔离原则
+
+## 依赖倒转原则
+
+## 里氏替换原则
+
+## 开闭原则
+
+ocp
+
+## 迪米特法则
+
+## 合成复用原则
+
 # 设计模式
 
 ## 创建型模式
