--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -1,8 +1,96 @@
+# 设计模式的目的
+
+使程序, 具有可重用性, 可读性(规范性), 可扩展性, 可靠性
+
+使程序能够高内聚, 低耦合 
+
 # 设计原则
 
 ## 单一职责原则
 
-英文名称是, **Single Responsibility Principle**, 简称**SRP**
+### 简介
+
+对于类来说, 一个类只负责一项职责.
+
+类A负责两个职责, 职责1, 职责2, 职责1的需求发生变化, 可能会导致职责2执行错误, 所以需要将职责A的粒度分解为A1, A2
+
+### 注意事项
+
+- 降低类的复杂度, 一个类只负责一项职责
+- 提高类的可读性, 可维护性
+- 降低变更引起的风险
+- 通常情况下, 我们应当遵守单一职责原则, 只有逻辑足够简单, 才可以在代码级违反单一职责原则; 只有类的方法足够少, 才可以在方法的级别保持单一职责原则
+
+### 样例
+
+#### 方案一
+
+```java
+/*
+*   交通工具类
+*   run方法, 可以传入飞机, 汽车, 飞机不能在公路上运行
+*   工具的作用不同, 违反了单一职责原则
+* */
+class Vehicle{
+    public void run(String vehicle){
+        System.out.println(vehicle + "在公路上运行");
+    }
+}
+```
+
+#### 方案二
+
+```java
+/*
+ *  方案二满足了单一职责原则, 但是改动过大, 对于调用方也增加了开销
+ *	公路交通工具类
+ * */
+class RoadVehicle{
+    public void run(String vehicle){
+        System.out.println(vehicle + "在公路上运行");
+    }
+}
+/*
+ *  天空交通工具类
+ * */
+class AirVehicle{
+    public void run(String vehicle){
+        System.out.println(vehicle + "在天空上运行");
+    }
+}
+/*
+ *  水中交通工具类
+ * */
+class WaterVehicle{
+    public void run(String vehicle){
+        System.out.println(vehicle + "在水里运行");
+    }
+}
+```
+
+#### 方案三
+
+```java
+/*
+*   拆分成方法, 没有在类级别遵守单一职责原则
+*   但是对于拆分成类, 成本较低
+* */
+class Vehicle{
+    public void runRoad(String vehicle){
+        System.out.println(vehicle + "在公路上运行");
+    }
+
+    public void runAir(String vehicle){
+        System.out.println(vehicle + "在空中运行");
+    }
+
+    public void runWater(String vehicle){
+        System.out.println(vehicle + "在水里运行");
+    }
+}
+```
+
+
 
 ## 接口隔离原则
 
