--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -94,6 +94,120 @@ class Vehicle{
 
 ## 接口隔离原则
 
+### 简介
+
+客户端不应该依赖他不需要的接口, 即一个类对另一个类的依赖, 应该建立在最小的接口上
+
+### 样例
+
+#### 方案一
+
+不符合接口隔离原则, B和D类实现了同一个接口, 但是实现的方法, 并不会被全部用到.
+
+所以接口对于B和D类不是最小接口
+
+```java
+// 拆分成接口1 和 2 ,3
+interface Interface1{
+    void method1();
+    void method5();
+}
+interface Interface2{
+    void method2();
+}
+interface Interface3{
+    void method3();
+    void method4();
+}
+// B类实现接口1,2
+class B implements Interface1, Interface2{
+    @Override
+    public void method1() {}
+    @Override
+    public void method2() {}
+    @Override
+    public void method5() {}
+}
+// B类实现接口2,3
+class D implements Interface2, Interface3{
+    @Override
+    public void method2() {}
+    @Override
+    public void method3() {}
+    @Override
+    public void method4() {}
+}
+// A类依赖B类, 并使用了B类全部方法
+class A{
+    public void depend1(Interface1 i){
+        i.method1();
+    }
+    public void depend2(Interface2 i){
+        i.method2();
+    }
+    public void depend5(Interface1 i){
+        i.method5();
+    }
+}
+// C类依赖D类, 并使用了D类全部方法
+class C{
+    public void depend2(Interface2 i){
+        i.method2();
+    }
+    public void depend3(Interface3 i){
+        i.method3();
+    }
+    public void depend4(Interface3 i){
+        i.method4();
+    }
+}
+```
+
+#### 方案二
+
+对接口进行拆分
+
+```java
+// 拆分成接口1 和 2
+interface Interface1{
+    void method1(); 
+}
+interface Interface2{
+    void method2();
+    void method3();
+}
+// B类D类分别实现接口1,2
+class B implements Interface1{
+    @Override
+    public void method1() {}
+}
+class D implements Interface2{
+    @Override
+    public void method2() {}
+    @Override
+    public void method3() {}
+}
+
+// A类通过接口B类, 但是只会用到B类的method1方法
+class A{
+    public void depend1(Interface1 i){
+        i.method1();
+    }
+}
+
+// C类通过接口B类, 但是只会用到B类的method1方法
+class C{
+    public void depend2(Interface2 i){
+        i.method2();
+    }
+    public void depend3(Interface2 i){
+        i.method3();
+    }
+}
+```
+
+
+
 ## 依赖倒转原则
 
 ## 里氏替换原则
