--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -206,9 +206,63 @@ class C{
 }
 ```
 
-
-
 ## 依赖倒转原则
+
+### 简介
+
+- 高层模块不应该依赖低层模块, 二者都应该是依赖其抽象
+- 抽象不应该依赖细节, 细节应该依赖抽象
+- 依赖倒转的中心思想是面向接口编程
+- 继承/实现时, 要遵守里氏替换原则
+
+### 样例
+
+#### 方案一
+
+```java
+class Email{
+    public String getInfo(){
+        return "邮件";
+    }
+}
+// 人类
+class Person{
+    // 接受信息的方法, 目前只能接受邮件, 想要再接收微信, 短信等信息, 就要修改方法
+    public void receive(Email email){
+        System.out.println(email.getInfo());
+    }
+}
+```
+
+#### 方案二
+
+```java
+// 定义一个接收器接口
+interface IReceiver{
+    String getInfo();
+}
+// 邮件类和微信类都实现这个接口
+class Email implements IReceiver{
+    @Override
+    public String getInfo(){
+        return "邮件";
+    }
+}
+class WeChat implements IReceiver{
+    @Override
+    public String getInfo() {
+        return "微信";
+    }
+}
+// 这样就可以接受多种类型的消息, 想要增加类型, 不需要修改Person类的代码
+class Person{
+    public void receive(IReceiver receiver){
+        System.out.println(receiver.getInfo());
+    }
+}
+```
+
+
 
 ## 里氏替换原则
 
