--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -266,6 +266,68 @@ class Person{
 
 ## 里氏替换原则
 
+### 简介
+
+正确的使用继承, 子类尽量不要重写父类的方法, 如果必须要重写, 可以定义一个公共抽象类, 让子类和父类都去继承这个公共抽象类, 将子类提升到父类一个级别, 避免重写, 降低耦合度,
+
+子类如果想使用父类的方法, 可以通过组合的方式
+
+### 样例
+
+#### 方案一
+
+```java
+class A {
+    public int func1(int num1, int num2){
+        return num1 - num2;
+    }
+}
+
+class B extends A{
+    // 如果A类和B类是两个不同的人开发
+    // 开发B类的人无意间重写了父类的方法
+    // 结果在A类开发人员在使用 new B().func1(1,2)时, 会得到错误的结果
+    @Override
+    public int func1(int a, int b){
+        return a + b;
+    }
+}
+```
+
+#### 方案二
+
+```java
+// 创建一个基类, 其他类都继承基类, 重写基类的方法
+// 使用里氏替换原则, 将原本B类作为子类, 提升到和A类一个级别
+abstract class Base{
+    abstract int func1(int num1, int num2);
+}
+class A extends Base{
+    @Override
+    public int func1(int num1, int num2){
+        return num1 - num2;
+    }
+}
+
+class B extends Base{
+	// 如果还想使用A类的方法, 可以将A类的实例对象, 作为B类的一个属性
+    // 使用组合
+    private A a = new A();
+    
+    @Override
+    public int func1(int a, int b){
+        return a + b;
+    }
+    // 使用A类的方法
+    public int func2(int a, int b){
+        return a.func1(a, b);
+    }
+}
+
+```
+
+
+
 ## 开闭原则
 
 ocp
