--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -326,15 +326,211 @@ class B extends Base{
 
 ```
 
+## 开闭原则(ocp)
+
+### 简介
+
+- 时编程中, 最基础, 最重要的原则
+- 一个类对类的提供方开放扩展,  对类的使用方关闭修改, 常用于set, get方法
+- 当程序需要变化时, 尽量使用扩展, 而不是修改源代码, 来实现变化
+
+### 样例
+
+#### 方案一
+
+```java
+// 使用方
+class GraphicEditor{
+    // 接送shape对象, 绘制不同的图形
+    // 违反了开闭原则,  如果使用方想绘制三角形, 则需要修改该方法
+    public void deawShape(Shape s){
+        if (s.m_type == 1){
+            drawRectangle(s);
+        }else if (s.m_type == 2){
+            drawCircle(s);
+        }
+    }
+
+    public void drawRectangle(Shape r){
+        System.out.println("矩形");
+    }
+
+    public void drawCircle(Shape r){
+        System.out.println("圆形");
+    }
+}
+
+class Shape{
+    int m_type;
+}
+
+class Rectangle extends Shape{
+    Rectangle(){
+        super.m_type = 1;
+    }
+}
+
+class Circle extends Shape{
+    Circle(){
+        super.m_type = 2;
+    }
+}
+```
+
+#### 方案二
+
+```java
+class GraphicEditor{
+    public void deawShape(Shape s){
+        s.draw();
+    }
+}
+
+abstract class Shape{
+    abstract void draw();
+}
+
+class Rectangle extends Shape{
+    @Override
+    void draw() {
+        System.out.println("矩形");
+    }
+}
+
+class Circle extends Shape{
+    @Override
+    void draw() {
+        System.out.println("圆形");
+    }
+}
+```
 
 
-## 开闭原则
-
-ocp
 
 ## 迪米特法则
 
+### 简介
+
+- 一个对象应该对其他对象保持最少的了解
+- 类与类的关系越密切, 耦合度越大
+- 只与直接朋友通信
+  - **直接朋友**:  A类的成员变量, 方法参数, 方法返回值为B类, 那么A类和B类是直接朋友, 局部变量不是直接朋友
+
+### 样例
+
+#### 样例一
+
+```java
+// 学校员工
+class Employee{
+    private String id;
+    public String getId() {
+        return id;
+    }
+    public void setId(String id) {
+        this.id = id;
+    }
+}
+// 学院员工
+class CollegeEmployee{
+    private String id;
+    public String getId() {
+        return id;
+    }
+    public void setId(String id) {
+        this.id = id;
+    }
+}
+class CollegeManager{
+    public List<CollegeEmployee> getAllEmployee(){
+        ArrayList<CollegeEmployee> list = new ArrayList<>();
+        for (int i = 0; i < 10; i++) {
+            CollegeEmployee emp = new CollegeEmployee();
+            emp.setId("学院员工" + i);
+            list.add(emp);
+        }
+        return list;
+    }
+}
+// Employee, CollegeEmployee是直接朋友
+// CollegeEmployee不是直接朋友, 这里违反了迪米特法则
+class SchoolManager{
+    public List<Employee> getAllEmployee(){
+        ArrayList<Employee> list = new ArrayList<>();
+        for (int i = 0; i < 15; i++) {
+            Employee emp = new Employee();
+            emp.setId("学校员工" + i);
+            list.add(emp);
+        }
+        return list;
+    }
+	// 将学校和学院员工全部输出
+    void printAllEmployee(Employee sub){
+        List<CollegeEmployee> list = sub.getAllEmployee();
+        for (CollegeEmployee collegeEmployee : list) {
+            System.out.println(collegeEmployee.getId());
+        }
+        List<Employee> list2 = getAllEmployee();
+        for (Employee employee : list2) {
+            System.out.println(employee.getId());
+        }
+    }
+}
+```
+
+#### 方案二
+
+```java
+class CollegeManager{
+    public List<CollegeEmployee> getAllEmployee(){
+        ArrayList<CollegeEmployee> list = new ArrayList<>();
+        for (int i = 0; i < 10; i++) {
+            CollegeEmployee emp = new CollegeEmployee();
+            emp.setId("学院员工" + i);
+            list.add(emp);
+        }
+        return list;
+    }
+	// 新增一个打印方法
+    public void printEmployee(){
+        List<CollegeEmployee> list = getAllEmployee();
+        for (CollegeEmployee collegeEmployee : list) {
+            System.out.println(collegeEmployee.getId());
+        }
+    }
+}
+
+class SchoolManager{
+    public List<Employee> getAllEmployee(){
+        ArrayList<Employee> list = new ArrayList<>();
+        for (int i = 0; i < 15; i++) {
+            Employee emp = new Employee();
+            emp.setId("学校员工" + i);
+            list.add(emp);
+        }
+        return list;
+    }
+
+    void printAllEmployee(CollegeManager sub){
+        // 调用打印方法
+        sub.printEmployee();
+        List<Employee> list2 = getAllEmployee();
+        for (Employee employee : list2) {
+            System.out.println(employee.getId());
+        }
+    }
+}
+```
+
+
+
 ## 合成复用原则
+
+### 简介
+
+- 尽量使用合成/聚合的方式, 而不是使用继承
+- 继承会让类之间的耦合度增强, A类有两个方法, B类继承A类, B类就会由A类的两个方法,但是B类只会用到A类的一个方法
+- 所以可以在B类的方法中, 将A类作为入参, 或者A类作为B类的全局变量, 来使用A类的方法, 降低耦合度
 
 # 设计模式
 
