--- a/面试/设计模式.md
+++ b/面试/设计模式.md
@@ -707,6 +707,71 @@ public class Main {
 
 ### 单例模式
 
+#### 饿汉式
+
+饿汉式的意思是, 表示不等待系统去调用, 在class被加载时就实例化对象, 占用较多空间
+
+因为是静态对象, 该对象不会被修改, 所以是线程安全的.
+
+**步骤**
+
+- 构造器私有化(防止new)
+- 类内部创建对象
+- 向外暴漏一个静态公共方法
+
+```java
+// 静态常量写法
+public class HungrySingleton {
+    // 禁止调用方使用构造方法创建类
+    private HungrySingleton(){}
+    // 类在加载时就创建对象
+    private final static HungrySingleton instance = new HungrySingleton();
+    // 对外暴露一个公有静态方法
+    public static HungrySingleton getInstance() {
+        return instance;
+    }
+}
+
+// 静态代码块写法
+class HungrySingleton2 {
+    // 禁止调用方使用构造方法创建类
+    private HungrySingleton2(){}
+    private static HungrySingleton2 instance;
+    // 在静态代码块中, 完成对象的创建
+    static {
+        instance = new HungrySingleton2();
+    }
+    // 对外暴露一个公有静态方法
+    public static HungrySingleton2 getInstance() {
+        return instance;
+    }
+}
+```
+
+**优点**
+
+- 写法简单, 在类加载时就完成了初始化, 避免了线程同步问题
+
+**缺点**
+
+- 在类加载的时候完成初始化, 如果该类没有被使用, 就会对内存造成浪费, 没有达到懒加载的效果
+
+**结论**
+
+- 这种方式可以使用, 可能会造成内存浪费
+
+
+
+
+
+#### 懒汉式
+
+##### 懒汉式(线程不安全)
+
+##### 懒汉式(线程安全, 同步方法)
+
+##### 懒汉式(线程安全, 同步代码块)
+
 #### 懒汉式(不推荐)
 
 懒汉式的意思是, 懒表示懒加载, 是指在使用的时候才开始实例化
@@ -721,38 +786,6 @@ public class LazySingleton {
             instance = new LazySingleton();
         }
         return instance;
-    }
-}
-```
-
-#### 饿汉式(不推荐)
-
-饿汉式的意思是, 表示不等待系统去调用, 在class被加载时就实例化对象, 占用较多空间
-
-因为是静态对象, 该对象不会被修改, 所以是线程安全的.
-
-```java
-public class HungrySingleton {
-    private static HungrySingleton instance = new HungrySingleton();
-    public static HungrySingleton getInstance() {
-        return instance;
-    }
-}
-```
-
-#### 静态内部类(推荐)
-
-外部类被加载时, 内部类不会被加载, 所以要比饿汉式节省空间
-
-在调用getInstance时, 内部类被加载, 初始化外部类静态实例, 由于是静态对象, 所以要比懒汉式线程安全
-
-```java
-public class Singleton{
-	private static class SingletonHolder{
-        private static final Singleton INSTANCE = new Singleton();
-    }
-    public static final Singleton getInstance(){
-        return SingletonHolder.INSTANCE;
     }
 }
 ```
@@ -790,6 +823,25 @@ public class Lock2Singleton {
     }
 }
 ```
+
+#### 静态内部类(推荐)
+
+外部类被加载时, 内部类不会被加载, 所以要比饿汉式节省空间
+
+在调用getInstance时, 内部类被加载, 初始化外部类静态实例, 由于是静态对象, 所以要比懒汉式线程安全
+
+```java
+public class Singleton{
+	private static class SingletonHolder{
+        private static final Singleton INSTANCE = new Singleton();
+    }
+    public static final Singleton getInstance(){
+        return SingletonHolder.INSTANCE;
+    }
+}
+```
+
+#### 枚举
 
 ### 建造者模式
 
